Add missing shade execution

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                 <version>3.3.0</version>
                 <configuration>
                     <minimizeJar>false</minimizeJar>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
                     <artifactSet>
                         <includes>
                             <include>de.devsylum.kconfig:bukkit</include>
@@ -76,6 +77,14 @@
                         </relocation>
                     </relocations>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
