Remove leftover Jenkins build info

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ${project.name}
-version: ${project.version}-b${build.number}
+version: ${project.version}
 main: me.minoneer.bukkit.endlessdispense.EndlessDispense
 author: minoneer
 description: ${project.description}
