--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <spigot.version>1.20.6-R0.1-SNAPSHOT</spigot.version>
+        <paper.version>1.20.6-R0.1-SNAPSHOT</paper.version>
         <kotlin.version>2.3.0</kotlin.version>
     </properties>
 
@@ -123,9 +123,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>${spigot.version}</version>
+            <groupId>io.papermc.paper</groupId>
+            <artifactId>paper-api</artifactId>
+            <version>${paper.version}</version>
         </dependency>
         <dependency>
             <groupId>de.devsylum.kconfig</groupId>
@@ -141,8 +141,8 @@
 
     <repositories>
         <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
         <repository>
             <id>bungeecord-repo</id>
