--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,4 @@ api-version: '1.20.6'
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib:${kotlin.version}
   - io.github.kraftlin:kraftlin-config-paper:${kraftlin.version}
+  - io.github.kraftlin:kraftlin-command-paper:${kraftlin.version}
